--- a/styles.css
+++ b/styles.css
@@ -29,9 +29,12 @@ body {
 } */
 
 .airport {
+    right: 0;
     position: absolute;
-    height: 100%;
+    rotate: 90deg;
     width: 100%;
+    height: 100%;
+    transform: translateY(1%);
 }
 
 /* Column - Forward */
